docs-archive/versioned_docs/version-1.6.0/docs/generated/metamodel/entities/incident.md
---
sidebar_position: 27
description: >-
  Incidents track data quality issues and operational problems against datasets,
  dashboards, and other assets, with status, owners, and notes.
title: Incident
slug: /generated/metamodel/entities/incident
custom_edit_url: null
---
# Incident

Incidents represent data quality issues, operational problems, or any other type of issue that affects data assets in DataHub. They provide a structured way to track, manage, and resolve problems across datasets, dashboards, charts, data flows, data jobs, and schema fields. Incidents help teams maintain data reliability by documenting problems, assigning responsibility, tracking resolution progress, and maintaining an audit trail of data quality events.

## Identity

Incidents are uniquely identified by a generated UUID string. Unlike most other DataHub entities that derive their identity from external systems, incidents are created within DataHub and assigned a unique identifier at creation time.

The URN structure for an incident is:

```
urn:li:incident:<uuid>
```

Example:

```
urn:li:incident:a1b2c3d4-e5f6-4a5b-8c9d-0e1f2a3b4c5d
```

The UUID is automatically generated by the system when an incident is raised, ensuring global uniqueness across all incidents in the DataHub instance.

## Important Capabilities

### Incident Types

Incidents can be categorized by type to help teams understand the nature of the problem. DataHub supports several predefined incident types as well as custom types:

- **FRESHNESS**: Triggered when data is not updated within expected time windows. Often raised by freshness assertions that detect stale data.
- **VOLUME**: Raised when data volume falls outside expected ranges (too much or too little data). Typically generated by volume assertions.
- **FIELD**: Indicates issues with specific field values, such as null values, invalid formats, or values outside acceptable ranges. Associated with field-level assertions.
- **SQL**: Triggered by SQL-based assertions that validate data using custom queries.
- **DATA_SCHEMA**: Raised when schema changes are detected, such as column additions, removals, or type changes.
- **OPERATIONAL**: General operational incidents such as pipeline failures, permission issues, or system errors.
- **CUSTOM**: User-defined incident types for organization-specific problems. When using CUSTOM type, you must provide a `customType` string to describe the incident category.

### Incident Status and Lifecycle

Incidents follow a lifecycle from creation through resolution, tracked through status and stage fields:

#### Status State

The top-level state indicates whether an incident is active or resolved:

- **ACTIVE**: The incident is ongoing and requires attention or action.
- **RESOLVED**: The incident has been addressed and is no longer active.

#### Lifecycle Stages

Incidents can be assigned to specific stages that represent where they are in the resolution process:

- **TRIAGE**: The impact and priority of the incident is being actively assessed. This is typically the first stage for newly reported incidents.
- **INVESTIGATION**: The root cause of the incident is being investigated by the assigned team.
- **WORK_IN_PROGRESS**: The incident is in the remediation stage, with active work happening to resolve the issue.
- **FIXED**: The incident has been resolved through corrective action (completed remediation).
- **NO_ACTION_REQUIRED**: The incident is resolved with no action required, for example if it was a false positive, expected behavior, or resolved itself.

The status also includes a `message` field for providing context about the current state and a `lastUpdated` timestamp tracking when the status was last modified.

### Priority Levels

Incidents can be assigned a priority to help teams triage and focus on the most critical issues:

- **CRITICAL** (priority 0): Severe issues requiring immediate attention that significantly impact business operations or data quality.
- **HIGH** (priority 1): Important issues that should be addressed promptly but are not immediately blocking.
- **MEDIUM** (priority 2): Moderate issues that should be addressed in the normal course of work.
- **LOW** (priority 3): Minor issues that can be addressed when time permits.

The priority field is stored as an integer (0-3) in the data model, allowing for programmatic sorting and filtering.

### Assignees

Incidents can be assigned to one or more users or groups responsible for investigating and resolving the issue. Each assignee includes:

- **actor**: The URN of the user (corpUser) or group (corpGroup) assigned to the incident.
- **assignedAt**: An audit stamp capturing who made the assignment and when it occurred.

Multiple assignees can collaborate on resolving a single incident, making it easy to involve cross-functional teams.

### Affected Entities

A key feature of incidents is the ability to link them to one or more affected data assets. The `entities` field contains an array of URNs referencing the assets impacted by the incident. Supported entity types include:

- **dataset**: Tables, views, streams, or other data collections
- **chart**: Data visualizations
- **dashboard**: Dashboard pages containing multiple charts
- **dataFlow**: Pipelines or workflows
- **dataJob**: Individual tasks or jobs within a pipeline
- **schemaField**: Specific fields/columns within a dataset

This linkage allows users to see all incidents affecting a particular asset and understand the scope of an incident across multiple assets.

### Incident Source

The `source` field tracks how the incident was created:

- **MANUAL**: The incident was manually created by a user through the UI or API.
- **ASSERTION_FAILURE**: The incident was automatically raised by a failed assertion. In this case, the `sourceUrn` field contains the URN of the assertion that triggered the incident.

This distinction helps teams understand which incidents require manual investigation versus those generated by automated monitoring.

### Temporal Tracking

Incidents maintain detailed temporal information:

- **startedAt**: The time when the incident actually began (may be earlier than when it was reported).
- **created**: An audit stamp tracking who created the incident and when it was first reported.
- **lastUpdated**: An audit stamp on the status tracking the most recent status change.

This temporal data helps teams understand incident timelines, calculate mean time to detection (MTTD), and mean time to resolution (MTTR).

### Tags

Like other DataHub entities, incidents can be tagged using the `globalTags` aspect. Tags help categorize and filter incidents, making it easier to find related issues or analyze incident patterns by category.

## Code Examples

### Create an Incident

The following example demonstrates creating a new incident and associating it with a dataset that has a data quality issue.

<details>
<summary>Python SDK: Create a basic incident</summary>

```python
# Inlined from /metadata-ingestion/examples/library/incident_create.py
# metadata-ingestion/examples/library/incident_create.py
import logging
import os
import uuid

import datahub.emitter.mce_builder as builder
import datahub.metadata.schema_classes as models
from datahub.emitter.mcp import MetadataChangeProposalWrapper
from datahub.emitter.rest_emitter import DatahubRestEmitter
from datahub.metadata.urns import IncidentUrn

log = logging.getLogger(__name__)
logging.basicConfig(level=logging.INFO)

# Configuration
gms_endpoint = os.getenv("DATAHUB_GMS_URL", "http://localhost:8080")
token = os.getenv("DATAHUB_GMS_TOKEN")
emitter = DatahubRestEmitter(gms_server=gms_endpoint, token=token)

# Generate a unique incident ID
incident_id = str(uuid.uuid4())
incident_urn = IncidentUrn(incident_id)

# Create the dataset URN that this incident affects
dataset_urn = builder.make_dataset_urn(
    platform="snowflake", name="analytics.sales_fact", env="PROD"
)

# Get the current actor URN for audit stamps
actor_urn = builder.make_user_urn("datahub")
audit_stamp = models.AuditStampClass(
    time=int(builder.get_sys_time() * 1000),
    actor=actor_urn,
)

# Create the incident info aspect
incident_info = models.IncidentInfoClass(
    type=models.IncidentTypeClass.FRESHNESS,
    title="Sales data not updated in 48 hours",
    description="The sales_fact table has not been refreshed since 2023-10-15. Expected daily updates are missing, which may impact downstream reporting and dashboards.",
    entities=[dataset_urn],
    status=models.IncidentStatusClass(
        state=models.IncidentStateClass.ACTIVE,
        stage=models.IncidentStageClass.TRIAGE,
        message="Investigating potential pipeline failure",
        lastUpdated=audit_stamp,
    ),
    priority=0,  # CRITICAL priority (0=CRITICAL, 1=HIGH, 2=MEDIUM, 3=LOW)
    source=models.IncidentSourceClass(type=models.IncidentSourceTypeClass.MANUAL),
    created=audit_stamp,
)

# Create and emit the metadata change proposal
metadata_change_proposal = MetadataChangeProposalWrapper(
    entityUrn=str(incident_urn),
    aspect=incident_info,
)

emitter.emit(metadata_change_proposal)
log.info(f"Created incident {incident_urn} for dataset {dataset_urn}")
log.info(
    f"Incident details: type={incident_info.type}, priority={incident_info.priority}, status={incident_info.status.state}"
)

```

</details>

### Update Incident Status

As incidents progress through their lifecycle, you'll need to update their status to reflect the current state and stage.

<details>
<summary>Python SDK: Update incident status and stage</summary>

```python
# Inlined from /metadata-ingestion/examples/library/incident_update_status.py
# metadata-ingestion/examples/library/incident_update_status.py
import logging

import datahub.emitter.mce_builder as builder
import datahub.metadata.schema_classes as models
from datahub.emitter.mcp import MetadataChangeProposalWrapper
from datahub.emitter.rest_emitter import DatahubRestEmitter
from datahub.ingestion.graph.client import DatahubClientConfig, DataHubGraph
from datahub.metadata.urns import IncidentUrn

log = logging.getLogger(__name__)
logging.basicConfig(level=logging.INFO)

# Configuration
gms_endpoint = "http://localhost:8080"
emitter = DatahubRestEmitter(gms_server=gms_endpoint, extra_headers={})
graph = DataHubGraph(DatahubClientConfig(server=gms_endpoint))

# Specify the incident to update (use the incident ID from incident_create.py)
incident_id = "a1b2c3d4-e5f6-4a5b-8c9d-0e1f2a3b4c5d"
incident_urn = IncidentUrn(incident_id)

# Retrieve the current incident info to preserve other fields
current_incident_info = graph.get_aspect(
    entity_urn=str(incident_urn),
    aspect_type=models.IncidentInfoClass,
)

if not current_incident_info:
    raise ValueError(f"Incident {incident_urn} not found")

# Get the current actor URN for audit stamps
actor_urn = builder.make_user_urn("jdoe")
audit_stamp = models.AuditStampClass(
    time=int(builder.get_sys_time() * 1000),
    actor=actor_urn,
)

# Update the status to reflect progress in resolving the incident
current_incident_info.status = models.IncidentStatusClass(
    state=models.IncidentStateClass.ACTIVE,
    stage=models.IncidentStageClass.WORK_IN_PROGRESS,
    message="Pipeline has been restarted. Monitoring for successful completion.",
    lastUpdated=audit_stamp,
)

# Optionally update priority if severity assessment changed
current_incident_info.priority = (
    1  # HIGH priority (0=CRITICAL, 1=HIGH, 2=MEDIUM, 3=LOW)
)

# Optionally assign team members to work on the incident
assignee1 = models.IncidentAssigneeClass(
    actor=builder.make_user_urn("jdoe"),
    assignedAt=audit_stamp,
)
assignee2 = models.IncidentAssigneeClass(
    actor=builder.make_user_urn("asmith"),
    assignedAt=audit_stamp,
)
current_incident_info.assignees = [assignee1, assignee2]

# Create and emit the metadata change proposal
metadata_change_proposal = MetadataChangeProposalWrapper(
    entityUrn=str(incident_urn),
    aspect=current_incident_info,
)

emitter.emit(metadata_change_proposal)
log.info(
    f"Updated incident {incident_urn} status to {current_incident_info.status.state}"
)
log.info(
    f"Status details: stage={current_incident_info.status.stage}, message={current_incident_info.status.message}"
)
log.info(f"Priority updated to {current_incident_info.priority}")
log.info(f"Assigned to {len(current_incident_info.assignees)} team members")

```

</details>

### Add Tags to an Incident

Tags can be added to incidents to categorize them by team, system, severity, or any other organizational dimension.

<details>
<summary>Python SDK: Add a tag to an incident</summary>

```python
# Inlined from /metadata-ingestion/examples/library/incident_add_tag.py
# metadata-ingestion/examples/library/incident_add_tag.py
import logging

import datahub.emitter.mce_builder as builder
import datahub.metadata.schema_classes as models
from datahub.emitter.mcp import MetadataChangeProposalWrapper
from datahub.emitter.rest_emitter import DatahubRestEmitter
from datahub.ingestion.graph.client import DatahubClientConfig, DataHubGraph
from datahub.metadata.urns import IncidentUrn

log = logging.getLogger(__name__)
logging.basicConfig(level=logging.INFO)

# Configuration
gms_endpoint = "http://localhost:8080"
emitter = DatahubRestEmitter(gms_server=gms_endpoint, extra_headers={})
graph = DataHubGraph(DatahubClientConfig(server=gms_endpoint))

# Specify the incident to tag (use the incident ID from incident_create.py)
incident_id = "a1b2c3d4-e5f6-4a5b-8c9d-0e1f2a3b4c5d"
incident_urn = IncidentUrn(incident_id)

# Create the tag URN
tag_urn = builder.make_tag_urn("data-quality")

# Get the current actor URN for audit stamps
actor_urn = builder.make_user_urn("datahub")
audit_stamp = models.AuditStampClass(
    time=int(builder.get_sys_time() * 1000),
    actor=actor_urn,
)

# Read current tags to preserve existing ones
current_tags = graph.get_aspect(
    entity_urn=str(incident_urn),
    aspect_type=models.GlobalTagsClass,
)

# Create tag association
tag_association = models.TagAssociationClass(
    tag=tag_urn,
    context="incident_categorization",
)

if current_tags:
    # Check if tag already exists
    tag_exists = any(existing_tag.tag == tag_urn for existing_tag in current_tags.tags)
    if not tag_exists:
        current_tags.tags.append(tag_association)
        updated_tags = current_tags
    else:
        log.info(f"Tag {tag_urn} already exists on incident {incident_urn}")
        updated_tags = current_tags
else:
    # No existing tags, create new GlobalTags aspect
    updated_tags = models.GlobalTagsClass(tags=[tag_association])

# Create and emit the metadata change proposal
metadata_change_proposal = MetadataChangeProposalWrapper(
    entityUrn=str(incident_urn),
    aspect=updated_tags,
)

emitter.emit(metadata_change_proposal)
log.info(f"Added tag {tag_urn} to incident {incident_urn}")
log.info(f"Incident now has {len(updated_tags.tags)} tag(s)")

```

</details>

### Query Incident via REST API

After creating incidents, you can retrieve them using the DataHub REST API to integrate with external monitoring or ticketing systems.

<details>
<summary>Query incident using REST API</summary>

```python
# Inlined from /metadata-ingestion/examples/library/incident_query_rest_api.py
# metadata-ingestion/examples/library/incident_query_rest_api.py
import logging
import os

import requests

import datahub.metadata.schema_classes as models
from datahub.ingestion.graph.client import DatahubClientConfig, DataHubGraph
from datahub.metadata.urns import IncidentUrn

log = logging.getLogger(__name__)
logging.basicConfig(level=logging.INFO)

# Configuration
gms_endpoint = os.getenv("DATAHUB_GMS_URL", "http://localhost:8080")
token = os.getenv("DATAHUB_GMS_TOKEN")
graph = DataHubGraph(DatahubClientConfig(server=gms_endpoint, token=token))

# Specify the incident to query (use the incident ID from incident_create.py)
incident_id = "a1b2c3d4-e5f6-4a5b-8c9d-0e1f2a3b4c5d"
incident_urn = IncidentUrn(incident_id)

# Query the incident info aspect
incident_info = graph.get_aspect(
    entity_urn=str(incident_urn),
    aspect_type=models.IncidentInfoClass,
)

if incident_info:
    log.info(f"Incident: {incident_urn}")
    log.info(f"  Type: {incident_info.type}")
    log.info(f"  Title: {incident_info.title}")
    log.info(f"  Description: {incident_info.description}")
    log.info(f"  Priority: {incident_info.priority}")
    log.info(f"  Status State: {incident_info.status.state}")
    log.info(f"  Status Stage: {incident_info.status.stage}")
    log.info(f"  Status Message: {incident_info.status.message}")
    log.info(f"  Affected Entities: {len(incident_info.entities)}")
    for entity_urn in incident_info.entities:
        log.info(f"    - {entity_urn}")

    if incident_info.assignees:
        log.info(f"  Assignees: {len(incident_info.assignees)}")
        for assignee in incident_info.assignees:
            log.info(f"    - {assignee.actor}")

    if incident_info.source:
        log.info(f"  Source Type: {incident_info.source.type}")
        if incident_info.source.sourceUrn:
            log.info(f"  Source URN: {incident_info.source.sourceUrn}")

    log.info(
        f"  Created: {incident_info.created.time} by {incident_info.created.actor}"
    )
    log.info(
        f"  Last Updated: {incident_info.status.lastUpdated.time} by {incident_info.status.lastUpdated.actor}"
    )
else:
    log.warning(f"Incident {incident_urn} not found")

# Query the tags aspect
tags = graph.get_aspect(
    entity_urn=str(incident_urn),
    aspect_type=models.GlobalTagsClass,
)

if tags:
    log.info(f"  Tags: {len(tags.tags)}")
    for tag_association in tags.tags:
        log.info(f"    - {tag_association.tag}")

# Alternative: Use the REST API directly with requests
# This approach is useful for integration with external systems

# Query incident entity using the REST API
headers = {"Content-Type": "application/json"}
if token:
    headers["Authorization"] = f"Bearer {token}"

response = requests.get(
    f"{gms_endpoint}/entities/{incident_urn}",
    headers=headers,
)

if response.status_code == 200:
    entity_data = response.json()
    log.info("\nREST API Response:")
    log.info(f"  Entity URN: {entity_data.get('urn')}")
    log.info(f"  Aspects: {list(entity_data.get('aspects', {}).keys())}")
else:
    log.error(f"Failed to query incident via REST API: {response.status_code}")

```

</details>

## Integration Points

### Relationship with Assertions

Incidents are tightly integrated with DataHub's assertion framework. When assertions (data quality checks) fail and are configured to raise incidents, they automatically create incident entities. These incidents:

- Reference the assertion that triggered them via the `sourceUrn` field
- Inherit the type from the assertion (FRESHNESS, VOLUME, FIELD, SQL, DATA_SCHEMA)
- Link to the assets being monitored by the assertion
- Can be configured at the assertion level to control whether failures generate incidents

This integration provides automatic incident creation for monitored data quality checks.

### Incidents Summary on Assets

DataHub entities that can have incidents (datasets, dashboards, charts, dataFlows, dataJobs, schemaFields) include an `incidentsSummary` aspect. This aspect provides:

- A count of active incidents affecting the entity
- A count of resolved incidents
- The priority breakdown of active incidents
- Quick access to incident details without querying the incident entities directly

This summary appears in the UI on asset pages, giving users immediate visibility into data quality issues.

### GraphQL Operations

The DataHub GraphQL API provides several operations for working with incidents:

- **raiseIncident**: Creates a new incident with specified type, priority, status, and affected entities
- **updateIncident**: Updates incident properties including title, description, status, priority, assignees, and affected entities
- **updateIncidentStatus**: Specifically updates the status state and stage of an incident
- **entityIncidents**: Queries all incidents affecting a particular entity

These operations are used by the DataHub UI and can be called directly by external applications.

### Authorization

Incident operations respect DataHub's authorization model. Users must have the `EDIT_ENTITY_INCIDENTS` privilege on an entity to:

- Create incidents affecting that entity
- Update incidents linked to that entity
- Change the status of incidents affecting that entity

This ensures that only users with appropriate permissions can manage incidents for sensitive data assets.

### Health Status

Incidents factor into the overall health status of DataHub entities. Assets with active CRITICAL or HIGH priority incidents may be marked as unhealthy in the UI, helping users quickly identify problematic data assets.

## Notable Exceptions

### Single vs. Multiple Affected Entities

While the data model supports incidents affecting multiple entities (via the `entities` array), some GraphQL resolvers currently have limitations when working with multi-entity incidents. Specifically, the `UpdateIncidentStatusResolver` currently only checks authorization against the first entity in the array. This is noted in the code as a TODO for future enhancement.

When creating incidents, it's recommended to:

- Use multiple entities when they're all affected by the same root cause (e.g., all downstream datasets affected by an upstream data quality issue)
- Be aware that users need appropriate permissions on all affected entities to update the incident
- Consider the UI implications of multi-entity incidents when displaying incident details

### Priority Field Type

The priority field is stored as an integer (0-3) rather than as an enum in the PDL model. This was noted in the schema comments as a potential area for future improvement. The GraphQL layer provides an enum interface (CRITICAL, HIGH, MEDIUM, LOW) that maps to these integer values, but the underlying storage uses integers.

When working with the low-level SDK, use the integer values:

- 0 = CRITICAL
- 1 = HIGH
- 2 = MEDIUM
- 3 = LOW

### Automatic vs. Manual Incidents

Incidents created automatically by assertion failures cannot have their `source` field changed to MANUAL, and vice versa. The source field is set at creation time and reflects the origin of the incident. This distinction is important for reporting and analytics, as it helps teams understand the effectiveness of automated monitoring versus manual incident reporting.

### Status Message Length

While there is no explicit length limit on the status `message` field in the schema, UI components may truncate very long messages. It's recommended to keep status messages concise (under 500 characters) and use the incident `description` field for longer explanations.

### Incident Retention

Incidents are not automatically deleted when their affected entities are removed. This preserves the historical record of data quality issues even after assets are deprecated or deleted. However, this can lead to orphaned incidents that reference non-existent entities. It's recommended to implement cleanup processes for incidents linked to deleted assets if this becomes an issue in your organization.

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Technical Reference Guide

The sections above provide an overview of how to use this entity. The following sections provide detailed technical information about how metadata is stored and represented in DataHub.

**Aspects** are the individual pieces of metadata that can be attached to an entity. Each aspect contains specific information (like ownership, tags, or properties) and is stored as a separate record, allowing for flexible and incremental metadata updates.

**Relationships** show how this entity connects to other entities in the metadata graph. These connections are derived from the fields within each aspect and form the foundation of DataHub's knowledge graph.

### Reading the Field Tables

Each aspect's field table includes an **Annotations** column that provides additional metadata about how fields are used:

- **⚠️ Deprecated**: This field is deprecated and may be removed in a future version. Check the description for the recommended alternative
- **Searchable**: This field is indexed and can be searched in DataHub's search interface
- **Searchable (fieldname)**: When the field name in parentheses is shown, it indicates the field is indexed under a different name in the search index. For example, `dashboardTool` is indexed as `tool`
- **→ RelationshipName**: This field creates a relationship to another entity. The arrow indicates this field contains a reference (URN) to another entity, and the name indicates the type of relationship (e.g., `→ Contains`, `→ OwnedBy`)

Fields with complex types (like `Edge`, `AuditStamp`) link to their definitions in the [Common Types](#common-types) section below.

### Aspects

#### incidentInfo
Information about an incident raised on an asset.

<Tabs>
<TabItem value="fields" label="Fields" default>


| Field | Type | Required | Description | Annotations |
|-------|------|----------|-------------|-------------|
| type | IncidentType | ✓ | The type of incident | Searchable |
| customType | string |  | An optional custom incident type. Present only if type is 'CUSTOM'. | Searchable |
| title | string |  | Optional title associated with the incident |  |
| description | string |  | Optional description associated with the incident |  |
| entities | string[] | ✓ | A reference to the entity associated with the incident. | Searchable, → IncidentOn |
| priority | int |  | A numeric severity or priority for the incident. On the UI we will translate this into something ... | Searchable |
| assignees | IncidentAssignee[] |  | The parties assigned with resolving the incident |  |
| status | IncidentStatus | ✓ | The current status of an incident, i.e. active or inactive. |  |
| source | IncidentSource |  | The source of an incident, i.e. how it was generated. |  |
| startedAt | long |  | The time at which the incident actually started (may be before the date it was raised). | Searchable |
| created | [AuditStamp](#auditstamp) | ✓ | The time at which the request was initially created | Searchable |

</TabItem>
<TabItem value="raw" label="Raw Schema">

```javascript
{
  "type": "record",
  "Aspect": {
    "name": "incidentInfo"
  },
  "name": "IncidentInfo",
  "namespace": "com.linkedin.incident",
  "fields": [
    {
      "Searchable": {
        "addToFilters": true,
        "filterNameOverride": "Type"
      },
      "type": {
        "type": "enum",
        "symbolDocs": {
          "CUSTOM": "A custom type of incident",
          "DATA_SCHEMA": "A Data Schema assertion has failed, triggering the incident.\nRaised on entities where assertions are configured to generate incidents.",
          "FIELD": "A Field Assertion has failed, triggering the incident.\nRaised on entities where assertions are configured to generate incidents.",
          "FRESHNESS": "An Freshness Assertion has failed, triggering the incident.\nRaised on entities where assertions are configured to generate incidents.",
          "OPERATIONAL": "A misc. operational incident, e.g. failure to materialize a dataset.",
          "SQL": "A raw SQL-statement based assertion has failed, triggering the incident.\nRaised on entities where assertions are configured to generate incidents.",
          "VOLUME": "An Volume Assertion has failed, triggering the incident.\nRaised on entities where assertions are configured to generate incidents."
        },
        "name": "IncidentType",
        "namespace": "com.linkedin.incident",
        "symbols": [
          "FRESHNESS",
          "VOLUME",
          "FIELD",
          "SQL",
          "DATA_SCHEMA",
          "OPERATIONAL",
          "CUSTOM"
        ],
        "doc": "A type of asset incident"
      },
      "name": "type",
      "doc": "The type of incident"
    },
    {
      "Searchable": {
        "addToFilters": true,
        "filterNameOverride": "Other Type"
      },
      "type": [
        "null",
        "string"
      ],
      "name": "customType",
      "default": null,
      "doc": "An optional custom incident type. Present only if type is 'CUSTOM'."
    },
    {
      "type": [
        "null",
        "string"
      ],
      "name": "title",
      "default": null,
      "doc": "Optional title associated with the incident"
    },
    {
      "type": [
        "null",
        "string"
      ],
      "name": "description",
      "default": null,
      "doc": "Optional description associated with the incident"
    },
    {
      "Relationship": {
        "/*": {
          "entityTypes": [
            "dataset",
            "chart",
            "dashboard",
            "dataFlow",
            "dataJob",
            "schemaField"
          ],
          "name": "IncidentOn"
        }
      },
      "Searchable": {
        "/*": {
          "fieldType": "URN"
        }
      },
      "type": {
        "type": "array",
        "items": "string"
      },
      "name": "entities",
      "doc": "A reference to the entity associated with the incident."
    },
    {
      "Searchable": {
        "addToFilters": true,
        "filterNameOverride": "Priority"
      },
      "type": [
        "null",
        "int"
      ],
      "name": "priority",
      "default": null,
      "doc": "A numeric severity or priority for the incident. On the UI we will translate this into something easy to understand.\nCurrently supported: 0 - CRITICAL, 1 - HIGH, 2 - MED, 3 - LOW\n(We probably should have modeled as an enum)"
    },
    {
      "type": [
        "null",
        {
          "type": "array",
          "items": {
            "type": "record",
            "name": "IncidentAssignee",
            "namespace": "com.linkedin.incident",
            "fields": [
              {
                "Searchable": {
                  "addToFilters": true,
                  "fieldName": "assignees",
                  "filterNameOverride": "Assignee"
                },
                "java": {
                  "class": "com.linkedin.common.urn.Urn"
                },
                "type": "string",
                "name": "actor",
                "doc": "The user or group assigned to the incident."
              },
              {
                "type": {
                  "type": "record",
                  "name": "AuditStamp",
                  "namespace": "com.linkedin.common",
                  "fields": [
                    {
                      "type": "long",
                      "name": "time",
                      "doc": "When did the resource/association/sub-resource move into the specific lifecycle stage represented by this AuditEvent."
                    },
                    {
                      "java": {
                        "class": "com.linkedin.common.urn.Urn"
                      },
                      "type": "string",
                      "name": "actor",
                      "doc": "The entity (e.g. a member URN) which will be credited for moving the resource/association/sub-resource into the specific lifecycle stage. It is also the one used to authorize the change."
                    },
                    {
                      "java": {
                        "class": "com.linkedin.common.urn.Urn"
                      },
                      "type": [
                        "null",
                        "string"
                      ],
                      "name": "impersonator",
                      "default": null,
                      "doc": "The entity (e.g. a service URN) which performs the change on behalf of the Actor and must be authorized to act as the Actor."
                    },
                    {
                      "type": [
                        "null",
                        "string"
                      ],
                      "name": "message",
                      "default": null,
                      "doc": "Additional context around how DataHub was informed of the particular change. For example: was the change created by an automated process, or manually."
                    }
                  ],
                  "doc": "Data captured on a resource/association/sub-resource level giving insight into when that resource/association/sub-resource moved into a particular lifecycle stage, and who acted to move it into that specific lifecycle stage."
                },
                "name": "assignedAt",
                "doc": "The time & actor responsible for assiging the assignee."
              }
            ],
            "doc": "The incident assignee type.\nThis is in a record so that we can add additional fields if we need to later (e.g.\nthe type of the assignee."
          }
        }
      ],
      "name": "assignees",
      "default": null,
      "doc": "The parties assigned with resolving the incident"
    },
    {
      "type": {
        "type": "record",
        "name": "IncidentStatus",
        "namespace": "com.linkedin.incident",
        "fields": [
          {
            "Searchable": {
              "addToFilters": true,
              "filterNameOverride": "Status"
            },
            "type": {
              "type": "enum",
              "symbolDocs": {
                "ACTIVE": "The incident is ongoing, or active.",
                "RESOLVED": "The incident is resolved."
              },
              "name": "IncidentState",
              "namespace": "com.linkedin.incident",
              "symbols": [
                "ACTIVE",
                "RESOLVED"
              ]
            },
            "name": "state",
            "doc": "The top-level state of the incident, whether it's active or resolved."
          },
          {
            "Searchable": {
              "addToFilters": true,
              "filterNameOverride": "Stage"
            },
            "type": [
              "null",
              {
                "type": "enum",
                "symbolDocs": {
                  "FIXED": "The incident is in the resolved as completed stage.",
                  "INVESTIGATION": "The incident root cause is being investigated.",
                  "NO_ACTION_REQUIRED": "The incident is in the resolved with no action required state, e.g. the\nincident was a false positive, or was expected.",
                  "TRIAGE": "The impact and priority of the incident is being actively assessed.",
                  "WORK_IN_PROGRESS": "The incident is in the remediation stage."
                },
                "name": "IncidentStage",
                "namespace": "com.linkedin.incident",
                "symbols": [
                  "TRIAGE",
                  "INVESTIGATION",
                  "WORK_IN_PROGRESS",
                  "FIXED",
                  "NO_ACTION_REQUIRED"
                ]
              }
            ],
            "name": "stage",
            "default": null,
            "doc": "The lifecycle stage for the incident - Null means no stage was assigned yet.\nIn the future, we may add CUSTOM here with a customStage string field for user-defined stages."
          },
          {
            "type": [
              "null",
              "string"
            ],
            "name": "message",
            "default": null,
            "doc": "Optional message associated with the incident"
          },
          {
            "Searchable": {
              "/time": {
                "fieldName": "lastUpdated",
                "fieldType": "COUNT"
              }
            },
            "type": "com.linkedin.common.AuditStamp",
            "name": "lastUpdated",
            "doc": "The time at which the request was initially created"
          }
        ],
        "doc": "Information about an incident raised on an asset"
      },
      "name": "status",
      "doc": "The current status of an incident, i.e. active or inactive."
    },
    {
      "type": [
        "null",
        {
          "type": "record",
          "Aspect": {
            "name": "incidentSource"
          },
          "name": "IncidentSource",
          "namespace": "com.linkedin.incident",
          "fields": [
            {
              "Searchable": {
                "addToFilters": true,
                "filterNameOverride": "Source"
              },
              "type": {
                "type": "enum",
                "symbolDocs": {
                  "ASSERTION_FAILURE": "An assertion has failed, triggering the incident.",
                  "MANUAL": "Manually created incident, via UI or API."
                },
                "name": "IncidentSourceType",
                "namespace": "com.linkedin.incident",
                "symbols": [
                  "MANUAL",
                  "ASSERTION_FAILURE"
                ]
              },
              "name": "type",
              "doc": "Message associated with the incident"
            },
            {
              "Searchable": {
                "fieldType": "URN"
              },
              "java": {
                "class": "com.linkedin.common.urn.Urn"
              },
              "type": [
                "null",
                "string"
              ],
              "name": "sourceUrn",
              "default": null,
              "doc": "Reference to an URN related to the source of an incident."
            }
          ],
          "doc": "Information about the source of an incident raised on an asset."
        }
      ],
      "name": "source",
      "default": null,
      "doc": "The source of an incident, i.e. how it was generated."
    },
    {
      "Searchable": {
        "/time": {
          "fieldName": "startedAt",
          "fieldType": "COUNT"
        }
      },
      "type": [
        "null",
        "long"
      ],
      "name": "startedAt",
      "default": null,
      "doc": "The time at which the incident actually started (may be before the date it was raised)."
    },
    {
      "Searchable": {
        "/time": {
          "fieldName": "created",
          "fieldType": "COUNT"
        }
      },
      "type": "com.linkedin.common.AuditStamp",
      "name": "created",
      "doc": "The time at which the request was initially created"
    }
  ],
  "doc": "Information about an incident raised on an asset."
}
```

</TabItem>
</Tabs>


#### incidentExternalLinks
Links to external systems for this incident (e.g., Jira, ServiceNow, PagerDuty)

<Tabs>
<TabItem value="fields" label="Fields" default>


| Field | Type | Required | Description | Annotations |
|-------|------|----------|-------------|-------------|
| links | IncidentExternalLink[] | ✓ | List of links to external systems |  |

</TabItem>
<TabItem value="raw" label="Raw Schema">

```javascript
{
  "type": "record",
  "Aspect": {
    "name": "incidentExternalLinks"
  },
  "name": "IncidentExternalLinks",
  "namespace": "com.linkedin.incident",
  "fields": [
    {
      "type": {
        "type": "array",
        "items": {
          "type": "record",
          "name": "IncidentExternalLink",
          "namespace": "com.linkedin.incident",
          "fields": [
            {
              "Searchable": {
                "fieldType": "KEYWORD"
              },
              "type": "string",
              "name": "connectionId",
              "doc": "Unique connection identifier for this integration. Allows linking to multiple instances\nof the same system (e.g., 'primary-jira', 'ops-servicenow', 'critical-pagerduty')."
            },
            {
              "Searchable": {
                "addToFilters": true,
                "fieldName": "externalSystem",
                "fieldType": "KEYWORD",
                "filterNameOverride": "External System"
              },
              "type": "string",
              "name": "system",
              "doc": "The external system name (e.g., 'jira', 'servicenow', 'pagerduty')."
            },
            {
              "Searchable": {
                "fieldName": "externalLinkId",
                "fieldType": "KEYWORD"
              },
              "type": "string",
              "name": "externalId",
              "doc": "The identifier in the external system (e.g., 'PROJ-123' for Jira)."
            },
            {
              "java": {
                "class": "com.linkedin.common.url.Url",
                "coercerClass": "com.linkedin.common.url.UrlCoercer"
              },
              "type": "string",
              "name": "url",
              "doc": "The direct URL to the external issue/ticket."
            },
            {
              "type": {
                "type": "record",
                "name": "AuditStamp",
                "namespace": "com.linkedin.common",
                "fields": [
                  {
                    "type": "long",
                    "name": "time",
                    "doc": "When did the resource/association/sub-resource move into the specific lifecycle stage represented by this AuditEvent."
                  },
                  {
                    "java": {
                      "class": "com.linkedin.common.urn.Urn"
                    },
                    "type": "string",
                    "name": "actor",
                    "doc": "The entity (e.g. a member URN) which will be credited for moving the resource/association/sub-resource into the specific lifecycle stage. It is also the one used to authorize the change."
                  },
                  {
                    "java": {
                      "class": "com.linkedin.common.urn.Urn"
                    },
                    "type": [
                      "null",
                      "string"
                    ],
                    "name": "impersonator",
                    "default": null,
                    "doc": "The entity (e.g. a service URN) which performs the change on behalf of the Actor and must be authorized to act as the Actor."
                  },
                  {
                    "type": [
                      "null",
                      "string"
                    ],
                    "name": "message",
                    "default": null,
                    "doc": "Additional context around how DataHub was informed of the particular change. For example: was the change created by an automated process, or manually."
                  }
                ],
                "doc": "Data captured on a resource/association/sub-resource level giving insight into when that resource/association/sub-resource moved into a particular lifecycle stage, and who acted to move it into that specific lifecycle stage."
              },
              "name": "created",
              "doc": "When this link was created."
            },
            {
              "type": "boolean",
              "name": "syncEnabled",
              "default": true,
              "doc": "Whether bidirectional sync is enabled for this link."
            },
            {
              "type": [
                "null",
                "long"
              ],
              "name": "lastSyncTimeMillis",
              "default": null,
              "doc": "Epoch milliseconds of the last successful synchronization."
            }
          ],
          "doc": "A link to an external system (e.g., Jira, ServiceNow, PagerDuty) associated with an incident."
        }
      },
      "name": "links",
      "default": [],
      "doc": "List of links to external systems"
    }
  ],
  "doc": "Links to external systems for this incident (e.g., Jira, ServiceNow, PagerDuty)"
}
```

</TabItem>
</Tabs>


#### incidentNotes
A collection of notes and updates added to an incident over its lifetime, by users
in DataHub or synced from external systems. Stored as a separate aspect so that
ingestion sources that UPSERT IncidentInfo do not accidentally overwrite user-authored notes.

<Tabs>
<TabItem value="fields" label="Fields" default>


| Field | Type | Required | Description | Annotations |
|-------|------|----------|-------------|-------------|
| notes | IncidentNote[] | ✓ | The list of notes associated with this incident, ordered by creation time ascending. |  |

</TabItem>
<TabItem value="raw" label="Raw Schema">

```javascript
{
  "type": "record",
  "Aspect": {
    "name": "incidentNotes"
  },
  "name": "IncidentNotes",
  "namespace": "com.linkedin.incident",
  "fields": [
    {
      "type": {
        "type": "array",
        "items": {
          "type": "record",
          "name": "IncidentNote",
          "namespace": "com.linkedin.incident",
          "fields": [
            {
              "Searchable": {
                "fieldType": "TEXT"
              },
              "type": "string",
              "name": "message",
              "doc": "The content of the note. Rendered as markdown in the UI."
            },
            {
              "type": {
                "type": "record",
                "name": "AuditStamp",
                "namespace": "com.linkedin.common",
                "fields": [
                  {
                    "type": "long",
                    "name": "time",
                    "doc": "When did the resource/association/sub-resource move into the specific lifecycle stage represented by this AuditEvent."
                  },
                  {
                    "java": {
                      "class": "com.linkedin.common.urn.Urn"
                    },
                    "type": "string",
                    "name": "actor",
                    "doc": "The entity (e.g. a member URN) which will be credited for moving the resource/association/sub-resource into the specific lifecycle stage. It is also the one used to authorize the change."
                  },
                  {
                    "java": {
                      "class": "com.linkedin.common.urn.Urn"
                    },
                    "type": [
                      "null",
                      "string"
                    ],
                    "name": "impersonator",
                    "default": null,
                    "doc": "The entity (e.g. a service URN) which performs the change on behalf of the Actor and must be authorized to act as the Actor."
                  },
                  {
                    "type": [
                      "null",
                      "string"
                    ],
                    "name": "message",
                    "default": null,
                    "doc": "Additional context around how DataHub was informed of the particular change. For example: was the change created by an automated process, or manually."
                  }
                ],
                "doc": "Data captured on a resource/association/sub-resource level giving insight into when that resource/association/sub-resource moved into a particular lifecycle stage, and who acted to move it into that specific lifecycle stage."
              },
              "name": "created",
              "doc": "When the note was created, and the actor who created it."
            },
            {
              "type": [
                "null",
                {
                  "type": "record",
                  "name": "IncidentNoteSource",
                  "namespace": "com.linkedin.incident",
                  "fields": [
                    {
                      "type": [
                        "null",
                        {
                          "type": "enum",
                          "symbolDocs": {
                            "EXTERNAL": "Synced from an external incident management or ticketing system.",
                            "NATIVE": "Created via the DataHub UI or API."
                          },
                          "name": "IncidentNoteSourceType",
                          "namespace": "com.linkedin.incident",
                          "symbols": [
                            "NATIVE",
                            "EXTERNAL"
                          ],
                          "doc": "The source type of an incident note, indicating whether it was created natively\nin DataHub or synced from an external system."
                        }
                      ],
                      "name": "sourceType",
                      "default": null,
                      "doc": "The type of system this note originated from. Optional \u2014 inferred from externalId presence\nwhen absent, but useful for explicit filtering and future third-party source types."
                    },
                    {
                      "Searchable": {
                        "fieldType": "KEYWORD",
                        "queryByDefault": false
                      },
                      "type": [
                        "null",
                        "string"
                      ],
                      "name": "externalUrl",
                      "default": null,
                      "doc": "URL to the note in the external system (e.g., a Jira comment permalink)."
                    },
                    {
                      "Searchable": {
                        "fieldType": "KEYWORD",
                        "queryByDefault": false
                      },
                      "type": [
                        "null",
                        "string"
                      ],
                      "name": "externalId",
                      "default": null,
                      "doc": "Unique identifier for the note in the external system, used for deduplication.\nFor example, a Jira comment ID."
                    }
                  ],
                  "doc": "The source of an incident note, indicating whether it was created natively in DataHub\nor synced from an external system (e.g., Jira, ServiceNow)."
                }
              ],
              "name": "source",
              "default": null,
              "doc": "The source of this note. Absent if the note was created natively in DataHub."
            }
          ],
          "doc": "A note or update added to an incident, either by a user in DataHub or synced from an\nexternal incident management system."
        }
      },
      "name": "notes",
      "default": [],
      "doc": "The list of notes associated with this incident, ordered by creation time ascending."
    }
  ],
  "doc": "A collection of notes and updates added to an incident over its lifetime, by users\nin DataHub or synced from external systems. Stored as a separate aspect so that\ningestion sources that UPSERT IncidentInfo do not accidentally overwrite user-authored notes."
}
```

</TabItem>
</Tabs>


#### globalTags
Tag aspect used for applying tags to an entity

<Tabs>
<TabItem value="fields" label="Fields" default>


| Field | Type | Required | Description | Annotations |
|-------|------|----------|-------------|-------------|
| tags | TagAssociation[] | ✓ | Tags associated with a given entity | Searchable, → TaggedWith |

</TabItem>
<TabItem value="raw" label="Raw Schema">

```javascript
{
  "type": "record",
  "Aspect": {
    "name": "globalTags"
  },
  "name": "GlobalTags",
  "namespace": "com.linkedin.common",
  "fields": [
    {
      "Relationship": {
        "/*/tag": {
          "entityTypes": [
            "tag"
          ],
          "name": "TaggedWith"
        }
      },
      "Searchable": {
        "/*/tag": {
          "addToFilters": true,
          "boostScore": 0.5,
          "fieldName": "tags",
          "fieldType": "URN",
          "filterNameOverride": "Tagged With",
          "hasValuesFieldName": "hasTags",
          "queryByDefault": true,
          "searchTier": 2
        }
      },
      "type": {
        "type": "array",
        "items": {
          "type": "record",
          "name": "TagAssociation",
          "namespace": "com.linkedin.common",
          "fields": [
            {
              "java": {
                "class": "com.linkedin.common.urn.TagUrn"
              },
              "type": "string",
              "name": "tag",
              "doc": "Urn of the applied tag"
            },
            {
              "type": [
                "null",
                "string"
              ],
              "name": "context",
              "default": null,
              "doc": "Additional context about the association"
            },
            {
              "Searchable": {
                "/actor": {
                  "fieldName": "tagAttributionActors",
                  "fieldType": "URN",
                  "queryByDefault": false
                },
                "/source": {
                  "fieldName": "tagAttributionSources",
                  "fieldType": "URN",
                  "queryByDefault": false
                },
                "/time": {
                  "fieldName": "tagAttributionDates",
                  "fieldType": "DATETIME",
                  "queryByDefault": false
                }
              },
              "type": [
                "null",
                {
                  "type": "record",
                  "name": "MetadataAttribution",
                  "namespace": "com.linkedin.common",
                  "fields": [
                    {
                      "type": "long",
                      "name": "time",
                      "doc": "When this metadata was updated."
                    },
                    {
                      "java": {
                        "class": "com.linkedin.common.urn.Urn"
                      },
                      "type": "string",
                      "name": "actor",
                      "doc": "The entity (e.g. a member URN) responsible for applying the assocated metadata. This can\neither be a user (in case of UI edits) or the datahub system for automation."
                    },
                    {
                      "java": {
                        "class": "com.linkedin.common.urn.Urn"
                      },
                      "type": [
                        "null",
                        "string"
                      ],
                      "name": "source",
                      "default": null,
                      "doc": "The DataHub source responsible for applying the associated metadata. This will only be filled out\nwhen a DataHub source is responsible. This includes the specific metadata test urn, the automation urn."
                    },
                    {
                      "type": {
                        "type": "map",
                        "values": "string"
                      },
                      "name": "sourceDetail",
                      "default": {},
                      "doc": "The details associated with why this metadata was applied. For example, this could include\nthe actual regex rule, sql statement, ingestion pipeline ID, etc."
                    }
                  ],
                  "doc": "Information about who, why, and how this metadata was applied"
                }
              ],
              "name": "attribution",
              "default": null,
              "doc": "Information about who, why, and how this metadata was applied"
            }
          ],
          "doc": "Properties of an applied tag. For now, just an Urn. In the future we can extend this with other properties, e.g.\npropagation parameters."
        }
      },
      "name": "tags",
      "doc": "Tags associated with a given entity"
    }
  ],
  "doc": "Tag aspect used for applying tags to an entity"
}
```

</TabItem>
</Tabs>


### Common Types

These types are used across multiple aspects in this entity.

#### AuditStamp

Data captured on a resource/association/sub-resource level giving insight into when that resource/association/sub-resource moved into a particular lifecycle stage, and who acted to move it into that specific lifecycle stage.

**Fields:**

- `time` (long): When did the resource/association/sub-resource move into the specific lifecyc...
- `actor` (string): The entity (e.g. a member URN) which will be credited for moving the resource...
- `impersonator` (string?): The entity (e.g. a service URN) which performs the change on behalf of the Ac...
- `message` (string?): Additional context around how DataHub was informed of the particular change. ...


### Relationships

#### Outgoing
These are the relationships stored in this entity's aspects
- IncidentOn

   - Dataset via `incidentInfo.entities`
   - Chart via `incidentInfo.entities`
   - Dashboard via `incidentInfo.entities`
   - DataFlow via `incidentInfo.entities`
   - DataJob via `incidentInfo.entities`
   - SchemaField via `incidentInfo.entities`
- TaggedWith

   - Tag via `globalTags.tags`
#### Incoming
These are the relationships stored in other entity's aspects
- ResolvedIncidents

   - Dataset via `incidentsSummary.resolvedIncidentDetails`
   - DataJob via `incidentsSummary.resolvedIncidentDetails`
   - DataFlow via `incidentsSummary.resolvedIncidentDetails`
   - Chart via `incidentsSummary.resolvedIncidentDetails`
   - Dashboard via `incidentsSummary.resolvedIncidentDetails`
- ActiveIncidents

   - Dataset via `incidentsSummary.activeIncidentDetails`
   - DataJob via `incidentsSummary.activeIncidentDetails`
   - DataFlow via `incidentsSummary.activeIncidentDetails`
   - Chart via `incidentsSummary.activeIncidentDetails`
   - Dashboard via `incidentsSummary.activeIncidentDetails`
### [Global Metadata Model](https://github.com/datahub-project/static-assets/raw/main/imgs/datahub-metadata-model.png)
![Global Graph](https://github.com/datahub-project/static-assets/raw/main/imgs/datahub-metadata-model.png)


:::note 💡 **Contributing to this documentation**
This page is auto-generated from the underlying source code. To make changes, please edit the relevant source files in the [metadata-models](https://github.com/datahub-project/datahub/tree/master/metadata-models) directory. 

**Tip:** For quick typo fixes or documentation updates, you can click the ✏️ **Edit** icon directly in the GitHub UI to open a Pull Request. For larger changes and PR naming conventions, please refer to our [Contributing Guide](/docs/contributing).
:::
